rust/crates/dsl-core/tests/snapshots/ast_golden__ast_deal_advance_stage.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 114
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "deal",
                verb: "advance-stage",
                arguments: [
                    Argument {
                        key: "deal-id",
                        value: SymbolRef {
                            name: "deal",
                            span: Span {
                                start: 29,
                                end: 34,
                            },
                        },
                        span: Span {
                            start: 20,
                            end: 34,
                        },
                    },
                    Argument {
                        key: "to",
                        value: Literal(
                            String(
                                "bac_approved",
                            ),
                            Span {
                                start: 39,
                                end: 53,
                            },
                        ),
                        span: Span {
                            start: 35,
                            end: 53,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 54,
                },
            },
        ),
    ],
}
