rust/crates/dsl-core/tests/snapshots/ast_golden__ast_edge_comment_only.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 380
expression: program
---
Program {
    statements: [
        Comment(
            "This is a planning comment for the operator",
        ),
    ],
}
