rust/crates/dsl-core/tests/snapshots/ast_golden__ast_edge_empty_program.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 388
expression: program
---
Program {
    statements: [],
}
