rust/crates/dsl-core/tests/snapshots/ast_golden__ast_edge_whitespace_variations.snap
---
source: crates/dsl-core/tests/ast_golden.rs
assertion_line: 404
expression: program
---
Program {
    statements: [
        VerbCall(
            VerbCall {
                domain: "cbu",
                verb: "create",
                arguments: [
                    Argument {
                        key: "name",
                        value: Literal(
                            String(
                                "Whitespace Fund",
                            ),
                            Span {
                                start: 19,
                                end: 36,
                            },
                        ),
                        span: Span {
                            start: 12,
                            end: 36,
                        },
                    },
                    Argument {
                        key: "jurisdiction",
                        value: Literal(
                            String(
                                "LU",
                            ),
                            Span {
                                start: 55,
                                end: 59,
                            },
                        ),
                        span: Span {
                            start: 39,
                            end: 59,
                        },
                    },
                ],
                binding: None,
                span: Span {
                    start: 0,
                    end: 60,
                },
            },
        ),
    ],
}
